src/objects/Operator_Program_Aircraft__c.object
<CustomObject>
    <description>Aircraft or cabin classes related to operator programs</description>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <label>Aircraft Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Aircraft_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft__c</fullName>
        <label>Aircraft Incentives to Negotiate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Per_Hour__c</fullName>
        <formula>(Cost_per_Hour_no_FET__c + Fuel_Cost__c) * 1.075</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Lease_Fee__c</fullName>
        <label>Annual Lease Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_MMF__c</fullName>
        <label>Annual MMF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Tax__c</fullName>
        <description>For NetJets and FlexJet</description>
        <inlineHelpText>For NetJets and FlexJet</inlineHelpText>
        <label>CA Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cabin_Type__c</fullName>
        <label>Cabin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cabin_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_per_Hour_no_FET__c</fullName>
        <label>Cost per Hour (no FET)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fuel_Cost__c</fullName>
        <label>Fuel Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Important_Notes__c</fullName>
        <label>Important Notes to Discuss with Client</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lease_Deposit__c</fullName>
        <label>Lease Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Seating_Capacity_Non_Lav__c</fullName>
        <label>Max Seating Capacity (Non-Lav)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OHF__c</fullName>
        <label>OHF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operator_Program_Market_Intelligence__c</fullName>
        <label>Operator Program Market Intelligence</label>
        <referenceTo>Operator_Program_Market_Intelligence__c</referenceTo>
        <relationshipName>Program_Aircraft</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Premium_MMF__c</fullName>
        <label>Premium MMF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Operator Program Aircraft</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAC-{0000}</displayFormat>
        <label>Program Aircraft Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operator Program Aircraft</pluralLabel>
    <recordTypes>
        <fullName>Fractional_Aircraft</fullName>
        <active>true</active>
        <label>Fractional Aircraft</label>
    </recordTypes>
    <recordTypes>
        <fullName>Jetcard_Aircraft</fullName>
        <active>true</active>
        <label>Jetcard Aircraft</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>